--- a/conf/cuckoo.conf
+++ b/conf/cuckoo.conf
@@ -17,7 +17,7 @@ delete_bin_copy = off
 # Specify the name of the machinery module to use, this module will
 # define the interaction between Cuckoo and your virtualization software
 # of choice.
-machinery = virtualbox
+machinery = vmware
 
 # Enable creation of memory dump of the analysis machine before shutting
 # down. Even if turned off, this functionality can also be enabled at
@@ -40,12 +40,12 @@ process_results = on
 
 # Limit the amount of analysis jobs a Cuckoo process goes through.
 # This can be used together with a watchdog to mitigate risk of memory leaks.
-max_analysis_count = 0
+max_analysis_count = 1
 
 # Limit the number of concurrently executing analysis machines.
 # This may be useful on systems with limited resources.
 # Set to 0 to disable any limits.
-max_machines_count = 0
+max_machines_count = 1
 
 # Limit the amount of VMs that are allowed to start in parallel. Generally
 # speaking starting the VMs is one of the more CPU intensive parts of the
@@ -108,7 +108,7 @@ auto_rt = yes
 # to contact the host through such address, so make sure it's valid.
 # NOTE: if you set resultserver IP to 0.0.0.0 you have to set the option
 # `resultserver_ip` for all your virtual machines in machinery configuration.
-ip = 192.168.56.1
+ip = 192.168.236.249
 
 # Specify a port number to bind the result server on.
 port = 2042
