--- a/conf/vmware.conf
+++ b/conf/vmware.conf
@@ -10,19 +10,22 @@ path = /usr/bin/vmrun
 # Specify a comma-separated list of available machines to be used. For each
 # specified ID you have to define a dedicated section containing the details
 # on the respective machine. (E.g. cuckoo1,cuckoo2,cuckoo3)
-machines = cuckoo1
+machines = Win7_Ult_x86
 
 # Specify the name of the default network interface that should be used
 # when dumping network traffic with tcpdump.
 # Example (virbr0 is the interface name):
-interface = virbr0
+interface = eth0
 
-[cuckoo1]
+[Win7_Ult_x86]
+
+label = WIn7_Ult_X86
+
 # Specify the path to vmx file of this virtual machine.
-vmx_path = ../cuckoo1/cuckoo1.vmx
+vmx_path = /home/x9090/VMImage/Win7_Ult_x86/Win7_Ult_x86.vmx
 
 # Specify the snapshot name to use.
-snapshot = Snapshot1 
+#snapshot = Snapshot1 
 
 # Specify the operating system platform used by current machine
 # [windows/darwin/linux].
@@ -31,7 +34,7 @@ platform = windows
 # Specify the IP address of the current virtual machine. Make sure that the
 # IP address is valid and that the host machine is able to reach it. If not,
 # the analysis will fail.
-ip = 192.168.54.111
+ip = 192.168.236.140
 
 # (Optional) Specify the name of the network interface that should be used
 # when dumping network traffic from this machine with tcpdump.
